# Vision-Hub

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
deploy/: vision-hub-field.env  vision-hub-network.env
deploy/dnsmasq/: install-rpi.sh
deploy/docker/: dnsmasq.Dockerfile  install-rpi.sh  render-configs.sh
deploy/docker/templates/: dnsmasq-admin.conf.template  dnsmasq.conf.template  mosquitto.conf.template  vision-hub-stack.service.template
deploy/homeassistant/: configuration.yaml
deploy/mosquitto/: install-rpi.sh  vision-hub.conf.template
deploy/rpi/: configure-field-interface.sh  configure-network-interfaces.sh
docs/: deployment.md  docker.md  home-assistant.md  inference.md  network.md  storage.md
tests/: test_deploy_configs.py  test_export_yolo_ncnn.py  test_homeassistant_discovery.py  test_mqtt_messages.py  test_mqtt_topics.py  test_ncnn_yolo.py  test_storage.py  test_storage_retention.py
tools/: export_yolo_ncnn.py  render_homeassistant_dashboard.py
vision_hub/: __init__.py
vision_hub/homeassistant/: __init__.py  discovery.py  ids.py
vision_hub/inference/: __init__.py  ncnn_yolo.py
vision_hub/mqtt/: __init__.py  client.py  messages.py  topics.py
vision_hub/storage/: __init__.py  retention.py  store.py
