[project]
name = "vision-hub"
version = "0.1.0"
description = "Edge hub communicating with ESP32-P4 surveillance nodes over MQTT via Ethernet"
readme = "README.md"
repository = "https://github.com/Sukikui/Vision-Hub"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "ncnn>=1.0.20260114",
    "numpy>=2.4.4",
    "paho-mqtt>=2.1.0",
    "pyyaml>=6.0.3",
]
